Modify end-points in CustomViewController
Modified end-points in CustomViewController class. They are now more suited for a fullstack application.